--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/platform-socket.io": "^8.4.6",
     "@nestjs/websockets": "^8.4.6",
     "@prisma/client": "^3.14.0",
+    "minio": "^7.0.28",
+    "nestjs-minio-client": "^1.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -37,6 +39,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
+    "@types/minio": "^7.0.13",
     "@types/node": "^16.0.0",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
