--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.4.6",
     "@nestjs/websockets": "^8.4.6",
     "@prisma/client": "^3.14.0",
+    "bcrypt": "^5.0.1",
     "minio": "^7.0.28",
     "nestjs-minio-client": "^1.2.0",
     "reflect-metadata": "^0.1.13",
